Code polishes, added Javadoc