@@ -18,7 +18,6 @@ import java.util.function.Consumer;
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVParser;
 import org.apache.commons.csv.CSVRecord;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.time.StopWatch;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -26,33 +25,46 @@ import org.slf4j.LoggerFactory;
 import reactor.core.publisher.Flux;
 import reactor.core.scheduler.Schedulers;
 
-public class EbirdCsvParser 
+public abstract class EbirdCsvParser 
 {
 	private static final Logger logger = LoggerFactory.getLogger(EbirdCsvParser.class);
 	
-	public enum ParseMode {single,parallel}
+	public enum ParseMode {SINGLE_THREAD,MULTI_THREAD}
 	
-	public enum PreSort {none,obsDt}	
+	public enum PreSort {NONE,DATE}	
 	
 	private static final DateTimeFormatter timeFormatter = DateTimeFormatter.ofPattern("hh:mm a");
-
-	private static final DateTimeFormatter csvDtf = DateTimeFormatter.ofPattern("yyyy-MM-dd hh:mm a");
 	
 	private static final AtomicInteger linesProcessed = new AtomicInteger(0);
 	
-	static LocalDateTime parseSubDate(CSVRecord record)
+	/**
+	 * Parses the date and time fields from a CSV record and returns a LocalDateTime object representing the combined datetime value. 
+	 * If the time is not defined, assumes midnight.
+	 *
+	 * @param record The CSVRecord representing a single row of data in the CSV file.
+	 * @return A LocalDateTime object representing the combined date and time parsed from the CSV record.
+	 */
+	static final LocalDateTime parseSubDate(CSVRecord record)
 	{
 		if (record.getRecordNumber() == 1l)
-            return LocalDateTime.MIN;        
+            return LocalDateTime.MIN; 
 		
-		String obsTimeStr = record.get(12);
-        if (StringUtils.isBlank(obsTimeStr))
-            obsTimeStr = "12:00 AM";
+		LocalTime obsTime;
+		if (record.get(12).isBlank())
+			obsTime = LocalTime.MIDNIGHT;
+		else
+			obsTime = LocalTime.parse(record.get(12),timeFormatter);
 		
-		return LocalDateTime.parse(record.get(11) + " " + obsTimeStr, csvDtf);
+		return LocalDate.parse(record.get(11)).atTime(obsTime);
 	}
 	
-	private static EbirdCsvRow parseCsvLine(CSVRecord record) 
+	/**
+	 * Parses a single CSV record and constructs an EbirdCsvRow object from the record's fields.
+	 *
+	 * @param record The CSVRecord representing a single row of data in the CSV file.
+	 * @return An EbirdCsvRow object constructed from the CSV record.
+	 */
+	private static final EbirdCsvRow parseCsvLine(CSVRecord record) 
 	{
 	    if (record.getRecordNumber() == 1l)
 	        return null; // skip the header
@@ -70,30 +82,29 @@ public class EbirdCsvParser
 	    row.setLocName(record.get(8));
 	    row.setLat(Double.parseDouble(record.get(9)));
 	    row.setLng(Double.parseDouble(record.get(10)));
-	    row.setDate(LocalDate.parse(record.get(11))); // Assuming the date format is ISO-8601 (yyyy-MM-dd)
+	    row.setDate(LocalDate.parse(record.get(11))); // Date format is ISO-8601 (yyyy-MM-dd)
 	    
-	    String timeStr = record.get(12);
-	    if (!StringUtils.isEmpty(timeStr))
-	    	row.setTime(LocalTime.parse(timeStr,timeFormatter)); // Assuming the time format is ISO-8601 (HH:mm:ss)
+	    if (!record.get(12).isBlank())
+	    	row.setTime(LocalTime.parse(record.get(12),timeFormatter));
 	    
 	    row.setProtocol(record.get(13));
 	    
-		if (!record.get(14).isEmpty())
+		if (!record.get(14).isBlank())
 			row.setDuration(Integer.parseInt(record.get(14)));
 		else
 			row.setDuration(0);
 	    
 		row.setCompleteChecklist(record.get(15).equals("1"));
 
-	    if (record.size() > 16 && !record.get(16).isEmpty()) {
+	    if (record.size() > 16 && !record.get(16).isBlank()) {
 	        row.setDistanceKm(Double.parseDouble(record.get(16)));
 	    }
 
-	    if (record.size() > 17 && !record.get(17).isEmpty()) {
+	    if (record.size() > 17 && !record.get(17).isBlank()) {
 	        row.setAreaHa(Double.parseDouble(record.get(17)));
 	    }
 
-	    if (record.size() > 18 && !record.get(18).isEmpty())
+	    if (record.size() > 18 && !record.get(18).isBlank())
 	    	row.setPartySize(Integer.parseInt(record.get(18)));
 	    
 	    if (record.size() > 19)
@@ -109,15 +120,21 @@ public class EbirdCsvParser
 	    }
 	    
 	    return row;
-	}
+	}	
 	
 	/**
-	 * Parses eBird CSV file using Apache Commons CSV library, and processes each line in parallel.
-	 * 
+	 * Parses a CSV file and applies the given row processor to each CSV record.
+	 * The parsing can be performed in single-threaded or multi-threaded mode,
+	 * based on the provided ParseMode. Optionally, the CSV records can be pre-sorted
+	 * based on the specified PreSort before processing.
+	 *
 	 * @param csvFile The path to the CSV file to be parsed.
+	 * @param rowProcessor The consumer function to be applied to each parsed CSV row.
+	 * @param mode The parsing mode: SINGLE_THREAD or MULTI_THREAD.
+	 * @param preSort The pre-sorting option for the CSV records: null, PreSort.DATE, or PreSort.DEFAULT_SORT.
 	 * @throws IOException If an I/O error occurs while reading the CSV file.
 	 */
-	public static void parseCsv(Path csvFile,ParseMode mode,PreSort preSort,Consumer<EbirdCsvRow> rowProcessor) throws IOException
+	public static final void parseCsv(Path csvFile,Consumer<EbirdCsvRow> rowProcessor,ParseMode mode,PreSort preSort) throws IOException
 	{
 		logger.info("Parsing " + csvFile + "...");
 		
@@ -130,12 +147,12 @@ public class EbirdCsvParser
 			StopWatch stopwatch = StopWatch.createStarted();
 			
 			Iterable<CSVRecord> records;
-			if (PreSort.obsDt == preSort)
+			if (PreSort.DATE == preSort)
 			{
 				// Read all lines and sort by date and time columns
 				List<CSVRecord> recordsList = csvParser.getRecords();	
 				recordsList.sort(Comparator.comparing(EbirdCsvParser::parseSubDate));
-				logger.info("Read " + (recordsList.size()-1) + " and sorted eBird observations in " + stopwatch.getTime(TimeUnit.SECONDS) + " seconds");
+				logger.debug("Read and sorted " + (recordsList.size()-1) + "eBird observations in " + stopwatch.getTime(TimeUnit.SECONDS) + " seconds");
 				records = recordsList;
 			}
 			else
@@ -156,10 +173,10 @@ public class EbirdCsvParser
 			
 			switch (mode)
 			{
-				case parallel:
+				case MULTI_THREAD:
 					Flux.fromIterable(records).parallel().runOn(Schedulers.parallel()).sequential(25000).doOnNext(csvRecordConsumer).then().block();
 					break;
-				case single:
+				case SINGLE_THREAD:
 					Flux.fromIterable(records).doOnNext(csvRecordConsumer).then().block();
 					break;
 			}
@@ -168,5 +185,17 @@ public class EbirdCsvParser
 			logger.info("Processed " + linesProcessed.get() + " eBird observations in " + stopwatch.getTime(TimeUnit.SECONDS) + " seconds");
 		}
 	}
-
+	
+	/**
+	 * Parses a CSV file using single-threaded mode and no pre-sorting, and applies the given row processor to each CSV record.
+	 *
+	 * @param csvFile The path to the CSV file to be parsed.
+	 * @param rowProcessor The consumer function to be applied to each parsed CSV row.
+	 * @throws IOException If an I/O error occurs while reading the CSV file.
+	 */
+	public static final void parseCsv(Path csvFile,Consumer<EbirdCsvRow> rowProcessor) throws IOException
+	{
+		parseCsv(csvFile,rowProcessor,ParseMode.SINGLE_THREAD,PreSort.NONE);		
+	}
+	
 }
